# countries_questionnaires

./: README.md  pyproject.toml
countries_questionnaires/countries_questionnares/: settings.py  urls.py
countries_questionnaires/templates/: base.html
countries_questionnaires/wvs_point/: models.py  urls.py  views.py
countries_questionnaires/wvs_point/templates/wvs_point/: wvs_test_about.html
countries_questionnares/: manage.py
countries_questionnares/countries_questionnares/: settings.py  views.py  wsgi.py
countries_questionnares/templates/: .fuse_hidden0000001d00000001  base.html
countries_questionnares/wvs_point/: apps.py  models.py  views.py
countries_questionnares/wvs_point/templates/wvs_point/: wvs_point_result.html  wvs_point_test.html  wvs_test_about.html
